gcc/testsuite/g++.dg/pr92370.C
// PR 92370 ICE with conlict marker

<<<<<<<>>>>>>> // { dg-error "conflict marker" }
